fixed google font css issue

--- a/css/main.css
+++ b/css/main.css
@@ -126,7 +126,7 @@ body {
 }
 
 #instructions h1 {
-	font-family: 'Bangers' Arial, Helvetica, sans-serif;
+	font-family: 'Bangers', Arial, Helvetica, sans-serif;
 	font-weight: 400;
 }
 
